  MYSQL_OPT_CONNECT_ATTR_RESET, MYSQL_OPT_LOCAL_INFILE) (Bug#19479950)
- Added missing sort order for DatabaseMetaData::getImportedKeys() and
  DatabaseMetaData::getIndexInfo() for no_i_s case. (Bug#19505248)
- There is no reconnection function in Connector/C++ (Bug#14207722)
- CMake picking up libmysqlclient from system path (Bug#19940663)

GA  1.1.4 -
- Both static and dynamic driver libraries are now linked statically against
  libmysql library
- Cannot Connect error when using legacy authentication. (Bug#16970753/69492)
- Connector/C++ doesn't implement MYSQL_OPT_SSL_VERIFY_SERVER_CERT,
  MYSQL_OPT_SSL_CRL, MYSQL_OPT_SSL_CRLPATH. Introduced connection options
  "sslVerify"(boolean), "sslCRL" and "sslCRLPath"(string). (Bug#18461451)
- Methods returning driver version information are now parametrized, and those
  parameters take their values from cmake config (Bug#14680878/66975)
- Added MYSQL_OPT_CONNECT_ATTR_ADD connection option accepting std::map
  argument and calls mysql_options4(). (Bug#18803313)
- MySQL_ResultSetMetaData::getColumnTypeName() returns UNKNOWN for LONG_BLOB
  fields. (Bug#18803414/72700)
- Missing collation info in the column metadata methods for a result.
  (Bug#18803345/72698)
- Added connection option "rsaKey" to specify RSA public key path name
  (wl#7972).

- Built against libmysql 5.6.

GA  1.1.3 - 2013-03-22
- Added boolean connection option OPT_ENABLE_CLEARTEXT_PLUGIN allowing to
  enable cleartext libmysql plugin. That plugin is required for some
  authentication methods, e.g. PAM. (Bug#16520952)
- getBestRowIdentifier() now considers unique not nullable indexes in case
  when primary key does not exist. (Bug#16277170)
- False value of the metadataUseInfoSchema connection option had no effect
  in database metadata object.

GA  1.1.2 - 2013-01-16
- Expired password support. Connection options
  OPT_CAN_HANDLE_EXPIRED_PASSWORDS(bool, application can deal with expired
  passwords), and preInit(string, commands to run prior to driver