@@ -47,6 +47,8 @@ GA  1.1.5 -
   DatabaseMetaData::getIndexInfo() for no_i_s case. (Bug#19505248)
 - There is no reconnection function in Connector/C++ (Bug#14207722)
 - CMake picking up libmysqlclient from system path (Bug#19940663)
+- Assertion failure in getClientOption when the provided option is not set
+  (Bug#19938922)
 
 GA  1.1.4 -
 - Both static and dynamic driver libraries are now linked statically against
